ingress_v1.0.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: nginx
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: ehddlf5709.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: index-service
                port:
                  number: 80
          - path: /films.jsp
            pathType: Prefix
            backend:
              service:
                name: films-service
                port:
                  number: 80
          - path: /login.jsp
            pathType: Prefix
            backend:
              service:
                name: login-service
                port:
                  number: 80
          - path: /join.jsp
            pathType: Prefix
            backend:
              service:
                name: join-service
                port:
                  number: 80
          - path: /mypage.jsp
            pathType: Prefix
            backend:
              service:
                name: mypage-service
                port:
                  number: 80
          - path: /purchase.jsp
            pathType: Prefix
            backend:
              service:
                name: purchase-service
                port:
                  number: 80
    - host: "*.ehddlf5709.shop"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: index-service
                port:
                  number: 80
          - path: /films.jsp
            pathType: Prefix
            backend:
              service:
                name: films-service
                port:
                  number: 80
          - path: /login.jsp
            pathType: Prefix
            backend:
              service:
                name: login-service
                port:
                  number: 80
          - path: /join.jsp
            pathType: Prefix
            backend:
              service:
                name: join-service
                port:
                  number: 80
          - path: /mypage.jsp
            pathType: Prefix
            backend:
              service:
                name: mypage-service
                port:
                  number: 80
          - path: /purchase.jsp
            pathType: Prefix
            backend:
              service:
                name: purchase-service
                port:
                  number: 80
